updated at: 2023-04-25 17:31, 【ボクセルモデル】ばんばんどっかんおっきなてっぽう　～車輪つきシリーズ～ - もふもふクロエちゃん工房改スペシャル - BOOTH

--- a/VRChat/54/1165354.html
+++ b/VRChat/54/1165354.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "t4kQVwwFHY0fUwmYNk+QDIRJAFLrccLXSOQKzdkWj98="></script>
+    "3x6hL9eyS4Zk0dCBQg+mpLRm2UeFJmALf7wGU5Hu9Ok="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ボクセルモデル】ばんばんどっかんおっきなてっぽう　～車輪つきシリーズ～","description":"最終更新日2019/01/05\n\n\n[製作者]https://www.youtube.com/channel/UCw8V1-vKkEWPzMaIJgMICpw\n\n・概要・\n\n「ばんばんどっかんおっきなてっぽう」はこの私クロエ作成のボクセルモデルです。\n本モデルの著作権はこの私クロエに帰属するものとします。\n本モデルは実在の兵器とは一切関係がございません。架空の兵器をお楽しみください。\n","url":"https://booth.pm/ja/items/1165354","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a2a92648-5828-4c7e-841d-4ba2cd74af64/i/1165354/d29c556a-4971-4c4f-85df-b3c4e43d5463_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="t4kQVwwFHY0fUwmYNk+QDIRJAFLrccLXSOQKzdkWj98="></script>
+    nonce="3x6hL9eyS4Zk0dCBQg+mpLRm2UeFJmALf7wGU5Hu9Ok="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1165354/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1165354/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
