updated at: 2023-04-25 17:31, オリジナル3Dモデル『憂鬱なマンドラゴラ』 - Dのアトリエ - BOOTH

--- a/VRChat/51/1165051.html
+++ b/VRChat/51/1165051.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bsU4knztPVh1zWOdAI+cexUIoKOoffjQoaCA2sSCJ5A="></script>
+    "Vjaz/oXmh1tR47SeNFZEURqS78wPkz/hH0yIskgoKjA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『憂鬱なマンドラゴラ』","description":"オリジナル3Dモデル『憂鬱なマンドラゴラ』","url":"https://booth.pm/ja/items/1165051","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/79abd1b2-cfb4-48ef-a09b-655557d8adb7/i/1165051/1dbf5b04-9f1d-41ed-94a3-927cf5dd2345_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bsU4knztPVh1zWOdAI+cexUIoKOoffjQoaCA2sSCJ5A="></script>
+    nonce="Vjaz/oXmh1tR47SeNFZEURqS78wPkz/hH0yIskgoKjA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1165051/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               150
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1165051/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               150
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
