--- a/VRChat/74/1164874.html
+++ b/VRChat/74/1164874.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tuh1LtLVhQbk1O3tJRag0CHHq27jlXX77xylhTWmgeE="></script>
+    "92yKRVRP51PrpOqZZPvaZrjYnFLoolch6GLzD9TD4JE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スクリーンショット月別整理ツール","description":"スクリーンショットを月別にフォルダ分けしてくれるバッチファイルです。yyyy-mm-ddの形で日付がファイル名に入っているファイル全般に使用できます。\n\nCaptureMover.batをフォルダ分けしたいファイル（スクリーンショットなど）と同じフォルダに置いてダブルクリックすると月別にフォルダの生成、振り分けをしてくれます。デフォルトでは生成フォルダ名がVRChat-yyyy-mmになっているので、違うゲームのスクリーンショットを整理したい時は適宜バッチファイルを書き換えてください。\n\n使用、改変自由ですが、当プログラム及び当プログラム内のコードを流用したプログラムに関してフォルダ、ファイルの損失、破損などいかなる問題が起きても責任は取りかねますのでご了承願います。","url":"https://booth.pm/ja/items/1164874","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/913fa660-7e17-489f-994b-c09d257c678a/i/1164874/45afb6c3-3c6e-4d53-9f38-c10114387e7a_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tuh1LtLVhQbk1O3tJRag0CHHq27jlXX77xylhTWmgeE="></script>
+    nonce="92yKRVRP51PrpOqZZPvaZrjYnFLoolch6GLzD9TD4JE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1164874/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1164874/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
