updated at: 2023-04-25 17:31, 思い出写真入れ（VRCカップル可）［無料］ - Materia Sarria - BOOTH

--- a/VRChat/71/1164871.html
+++ b/VRChat/71/1164871.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5+voLK0ysvgnpzYBSu5VKw0Kjy0FWHqC89P+54l5SxM="></script>
+    "pX2khg2OlqagSy5rVpZoRR4Cfr3NxELnvXhYgx6m9QI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"思い出写真入れ（VRCカップル可）［無料］","description":"ポリ数：1472\nマテリアル数：３\nVRCで撮った思い出のSSを合計2枚入れることができます！\nVRCのカップルにもおすすめです！！\n※ブースト用。無料版の中身は変わりません！","url":"https://booth.pm/ja/items/1164871","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1164871/db810306-9c9b-4eb9-9a47-3465f309c8d2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5+voLK0ysvgnpzYBSu5VKw0Kjy0FWHqC89P+54l5SxM="></script>
+    nonce="pX2khg2OlqagSy5rVpZoRR4Cfr3NxELnvXhYgx6m9QI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1164871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1164871/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
