--- a/VRChat/05/1164805.html
+++ b/VRChat/05/1164805.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Pbh72mh3638HYgZT2CI9xYvVA4GIm8AHlbeuYg1BnKk="></script>
+    "250tLqyAJehd/Nfxlp3L3tABF5WhTGqXGecabHIixtU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"　頭部素体（猫耳付き）","description":"　　\nローポリ頭部素！\n\n好みの頭部に編集しやすいポリゴンになっていると思います！\n\n細分化するときれいにまとまります。\n\n頭部のみUV展開しましたので新しくファイルをアップロードしました！\n\n\n","url":"https://booth.pm/ja/items/1164805","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/c1e1e99c-5305-4040-a922-a5d843a8edee/i/1164805/e004228b-188f-4bf5-9245-5c0e47f77892_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Pbh72mh3638HYgZT2CI9xYvVA4GIm8AHlbeuYg1BnKk="></script>
+    nonce="250tLqyAJehd/Nfxlp3L3tABF5WhTGqXGecabHIixtU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1164805/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1164805/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
