--- a/VRChat/46/1163846.html
+++ b/VRChat/46/1163846.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2keiiowuirI0oV2/dxOJHgS8xznPA6mE7IgpCdOHIvM="></script>
+    "p5Eh+AWGRuB64GWtGxidX7yE3yUluIJyap9OU37VJuo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Snowflake [BGM]","description":"落ち着いた雰囲気のBGM素材です。\n動画、生放送、ゲーム、VRChatのワールドなど、\nさまざまなコンテンツに利用可能です。\n\n◇内容◇\n通常版（サンプル通りの編曲）およびループ編集版の\n2パターンを収録しています。\nファイル形式は\nmp3(320 kbps), ogg(320 kbps), wav(1411 kbps) \nの3種類のフォーマットで収録しています。\n\n\n◇禁止事項◇\n・再配布\n・公序良俗に反する行為や政治的活動での使用\n\n作者：Cyphia\nhttps://cyphia.booth.pm/\n[Twitter] https://twitter.com/Cymphis\n","url":"https://booth.pm/ja/items/1163846","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/71c59797-4da6-414d-8e21-39c755f05ca7/i/1163846/a5ed6fd8-afa6-46a4-a339-71b6499b1beb_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2keiiowuirI0oV2/dxOJHgS8xznPA6mE7IgpCdOHIvM="></script>
+    nonce="p5Eh+AWGRuB64GWtGxidX7yE3yUluIJyap9OU37VJuo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -176,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1163846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -191,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1163846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
