--- a/VRChat/04/1163804.html
+++ b/VRChat/04/1163804.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0NjiqJuWn+WfaLlhsfPgCb4gZuRgNyDX1VIxnR252/0="></script>
+    "qUUsiVrP2WkSP0mTrF1XKa2ldvMzQRP03azE4qYrlvU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"歩兵用小型盾 \"Scale Shield\"","description":"新たな解釈で制作した歩兵用小型盾です。\n\nSketchfabで3Dモデルを閲覧することができます\nStandardシェーダー向きのPBRテクスチャと、トゥーン系シェーダー向きのColorテクスチャを用意しています\n（4枚目のPBR、Unlit比較にはUnityのDirectional Lightを配置しています）\n\nポリゴン数　△：594\n全高：52.8cm\n横幅：40.2cm\n\n※PrisetMaterialだと、少し暗すぎることがあるので、Albedoの明度を変更することをオススメします　設定方法は最後の画像を御覧ください\n\n※5枚目の使用例画像に含まれている剣は一点物の非売品です。\n量産品はこちら→ https://garden-of-ashen.booth.pm/items/1139288","url":"https://booth.pm/ja/items/1163804","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1163804/cedb05ee-4332-4b53-8b77-5c0525d2e15d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0NjiqJuWn+WfaLlhsfPgCb4gZuRgNyDX1VIxnR252/0="></script>
+    nonce="qUUsiVrP2WkSP0mTrF1XKa2ldvMzQRP03azE4qYrlvU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -179,10 +179,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1163804/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              114
+                              115
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -194,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1163804/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              114
+                              115
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
