updated at: 2023-04-25 17:32, 【VRchat向け】 バレンタインチョコレート - ペトリコール - BOOTH

--- a/VRChat/40/1163740.html
+++ b/VRChat/40/1163740.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sLGveirYxIorNkhZz01lFhX1Zl9h/KEeRrgK3b4L+KE="></script>
+    "uM6O9YHHTJnCyMxC4Mr/HvAmDjgwvls7OU4n4G1CNOk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】 バレンタインチョコレート","description":"【VRchat向け】バレンタインチョコレート 説明文\nバレンタインやカップルなどと甘いひと時がが送りたい時、女の子にお菓子を配りたい時、Unityと和解したい時などにお使いください。\n\n\n【内容物】\n・FBXファイル×1　△7928\n・テクスチャ×22\n・unitypackage\n・readme\n\n【利用規約】\n本モデルを購入した時点で本利用規約に同意したものとします。\n　利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n1/28 再配布は一度のみ可とします。\n\n○禁止行為\n　以下のような使用を禁止致します。\n　・公序良俗に反する利用\n　・政治的・宗教的主張に関する利用\n　・製品の再販売\n　・自作発言等","url":"https://booth.pm/ja/items/1163740","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9acc3a5a-1c6d-4055-a999-cdd91a9e8240/i/1163740/bce90329-9716-4257-a54b-7f2e1f8e5d7f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sLGveirYxIorNkhZz01lFhX1Zl9h/KEeRrgK3b4L+KE="></script>
+    nonce="uM6O9YHHTJnCyMxC4Mr/HvAmDjgwvls7OU4n4G1CNOk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1163740/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1163740/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
