updated at: 2023-04-25 17:32, フルーツドラゴン - テルキ堂(Terukidou) - BOOTH

--- a/VRChat/16/1162816.html
+++ b/VRChat/16/1162816.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OAIDL+i9ihrv/lTAIt2x4QjteYQFSZPNR95JkP6W0+g="></script>
+    "stIIYXSItHR4+XKVjHDpCYM331hz6hofrzfbQGDgohQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フルーツドラゴン","description":"VRChat対応アバター「フルーツドラゴン」\n\n\n\n果物型アバターシリーズその2です。\nふと、ドラゴン型のアバターを制作してみたくなったのがきっかけで、\n前回のキウイバードのようなネタを仕込んで制作したアバターとなります。\n\n\nキウイバードと同様に、\nデスクトップPCでの操作を基準として制作しておりますので、\n手の動きは無い（モデルの手を作っていない）ですが、\n物を持ったりすることは問題なく行うことができ、\nまた、Shift+F〇キー操作によるシェイプ芸も同様に\n仕込んでおります。\n\n\n\nポリゴン数：12060\n\nリップシンク対応\n\nCubed's unity shader使用\n\nunitypackage：有\n\nDynamicBone対応\n・尻尾や頭部の舌が揺れるようになります。\n（DynamicBone無しでも問題ありません）","url":"https://booth.pm/ja/items/1162816","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1162816/81667104-4222-483d-86f2-445cccb6134d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OAIDL+i9ihrv/lTAIt2x4QjteYQFSZPNR95JkP6W0+g="></script>
+    nonce="stIIYXSItHR4+XKVjHDpCYM331hz6hofrzfbQGDgohQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1162816/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1162816/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
