--- a/VRChat/12/1162812.html
+++ b/VRChat/12/1162812.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RMaSF6f+YD2rHA9P/ZNiEofYvK09lEahrA2p7MoBEOM="></script>
+    "6OTBpdeqKR3fcUcC/Bsx/mx2QBB5rYTN527Mxsb1zJI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キウイバード","description":"VRChat対応アバター「キウイバード」\n(VRMにも対応） \n\n\nとあるイベント用に制作した果物型鳥類アバターです。\n試作でワールド巡りをした所、いろいろな方々に好評でしたので、\nこの度BOOTH販売させて頂きました。\n\n\n主にデスクトップPCでの操作を基準として制作しておりますので、\n手の動きは無い（モデルの手を作っていない）ですが、\n物を持ったりすることは問題なく行えます。\n\nそして、Shift+F〇キー操作によるシェイプ芸を\n少々仕込んでおりますので、お愉しみ下さい。\n\n\n\nポリゴン数：6898\n\nリップシンク対応\n\n『ユニティちゃんトゥーンシェーダーVer.2.0』使用\n\nunitypackage：有\n\n\n＜アップデート＞\n2019.03.02\nVRMファイルを追加しました。\n※3teneのソフトを使用するなどで確認できます。\n\n2020.4.15\nキウイバードのバリエーションを追加しました。\nバリエーション追加に伴い、使用シェーダーを\n「Cubed's unity shader」から\n『ユニティちゃんトゥーンシェーダーVer.2.0』に変更しました。\n\n変更前のキウイバードをダウンロード頂いた方には、\nお手数ですが『ユニティちゃんトゥーンシェーダーVer.2.0』\nの導入をお願いします。\n\n導入方法については、\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n↑にて詳細が記載されております。\n\n2021.2.19\nクエスト対応アバター「KiwiBird_Quest」を追加しました。","url":"https://booth.pm/ja/items/1162812","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1162812/c4bd5f77-03cb-4211-9202-90470eb0d4bd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RMaSF6f+YD2rHA9P/ZNiEofYvK09lEahrA2p7MoBEOM="></script>
+    nonce="6OTBpdeqKR3fcUcC/Bsx/mx2QBB5rYTN527Mxsb1zJI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1162812/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               405
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1162812/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               405
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
