--- a/VRChat/70/1163570.html
+++ b/VRChat/70/1163570.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PG8h86vyxybh4KlVVaOKFg++EeW6+j3YohvFKQ6dQgw="></script>
+    "sRU9uAB3P9zHrHxbvO34NZMCC6JflIUVo3kElRX4AhI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　『エルギット(Ergit)』V2.1","description":"VRChatでの使用を想定したオリジナル3Dモデルの「エルギット」です。\nケモノな男の子で元気溌剌なイメージで作りました。\n\n※V2以前のバージョンをお持ちの方は無料でV2をご利用できます。\n\n◇利用規約◇\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n・他人が利用できるようにし、著作者の販売を阻害すること。\n・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n・利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n◇unitypackage導入前に◇\n\n・VRCSDK、Arktoon-Shaders、DynamicBone(任意)をImportしたうえでImportすること\n\n\n◇内容物◇\n\n・Ergit_V2.unitypackage\n┃\n┣・AvatarScene　――　DynamicBoneやVRChatアップロード用セットアップ済みモデルを配置したSceneファイル\n┃\n┣・Modelsフォルダ\n┃┃\n┃┣・Ergit_V2.fbx　――　通常の3Dモデルファイル\n┃┃\n┃┗・Ergit_V2_Parting.fbx　――　素体以外が別オブジェクトになっている3Dモデルファイル\n┃\n┣・Animationsフォルダ　――　AnimationOverride用のAnimation\n┃\n┣・Materialsフォルダ　――　Material\n┃\n┗・Texturesフォルダ　――　Texture\n\n・Body.psd　――　レイヤー分けしたテクスチャデータ\n\n\n◇更新履歴\n\n　2020/06/03 V2.1\n　　・Unity2018対応\n　　・ウェイトを修正/調整\n　　・メインテクスチャを調整\n　　・マテリアルを調整\n　　・メタリックマップを追加\n　　・？？？にボーンを追加\n","url":"https://booth.pm/ja/items/1163570","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1163570/55436e44-501d-4291-845c-dfdc38187de1_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PG8h86vyxybh4KlVVaOKFg++EeW6+j3YohvFKQ6dQgw="></script>
+    nonce="sRU9uAB3P9zHrHxbvO34NZMCC6JflIUVo3kElRX4AhI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1163570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1163570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
