updated at: 2023-04-25 17:33, world overlay shader - migero - BOOTH

--- a/VRChat/78/1161778.html
+++ b/VRChat/78/1161778.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KSb3/dTgDm5+haF3C3U+/96SAhwRCWMLTFnwM7tyLsU="></script>
+    "czHIUalwdM+rwvJzxLnBHUdLA0TyuV7Jkd3UN+t8UzY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"world overlay shader","description":"影付きの光が必要です\n","url":"https://booth.pm/ja/items/1161778","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f7f716f-50d5-4447-97f1-2c584e695105/i/1161778/8f30dada-cb36-45c2-86d1-a34597925011_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KSb3/dTgDm5+haF3C3U+/96SAhwRCWMLTFnwM7tyLsU="></script>
+    nonce="czHIUalwdM+rwvJzxLnBHUdLA0TyuV7Jkd3UN+t8UzY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -141,7 +143,7 @@
                             "https://migero.booth.pm/"><img alt=
                             "migero" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5666536/icon_image/a6e388cc-a553-4af8-a8d1-4a24eb8cad52_base_resized.jpg">migero</a>
+                            "https://booth.pximg.net/c/48x48/users/5666536/icon_image/d04eeb41-8eb8-4ebf-865d-17c8fd3cc997_base_resized.jpg">migero</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               world overlay shader
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1161778/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              840
+                              841
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1161778/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              840
+                              841
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
