updated at: 2023-04-25 17:34, [VRM&amp;Unitypackage]鳥獣人物戯画 - 塩トローチBooth - BOOTH

--- a/VRChat/70/1155170.html
+++ b/VRChat/70/1155170.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y3jMEG5OQgqStE8NP7tceTQTQRvptpwdIp1FJHtdzyQ="></script>
+    "n63Wt1OruRyhSgsPllBRpRT69OGXBbCM6FO0MfK7fQg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRM\u0026Unitypackage]鳥獣人物戯画","description":"――なんで売ることになったのか、よくわからない――\n\nバーチャルキャストやclusterで使うことができる、VRM形式のオリジナル3DCGモデルです。VRChatアバターとしての利用も可能！\n許可範囲内での営利利用も可能です。","url":"https://booth.pm/ja/items/1155170","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/849eb5f8-33ff-4e28-9367-3cf9314e2366/i/1155170/526f527b-b474-45b4-b1b8-68fad4ba8260_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y3jMEG5OQgqStE8NP7tceTQTQRvptpwdIp1FJHtdzyQ="></script>
+    nonce="n63Wt1OruRyhSgsPllBRpRT69OGXBbCM6FO0MfK7fQg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,10 +182,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1155170/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              353
+                              354
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1155170/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              353
+                              354
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
